--- a/public/app.css
+++ b/public/app.css
@@ -46,14 +46,15 @@ h1{
     text-align: center;
     text-shadow: 2px;
 }
-.about{
+.indeximg{
     display: block;
-    height: 500px;
-    width: 50%;
+    height: 475px;
+    width: 55%;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
 }
-.aboutme{
+.indexdescription{
     border: 2px solid black;
     width: 70%;
     margin-left: auto;
