--- a/public/app.css
+++ b/public/app.css
@@ -8,6 +8,25 @@ body {
 }
 .color{
     width: 100%;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+}
+.paragraph{
+    border: 2px solid black;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%
+}
+.abt{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.abouttitle{
+    text-align: center;
 }
 header{
     background-color: skyblue;
@@ -49,7 +68,7 @@ h1{
 .indeximg{
     display: block;
     height: 475px;
-    width: 55%;
+    width: 70%;
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
@@ -68,11 +87,24 @@ h1{
 .index{
     display:flex;
     justify-content: space-evenly;
-    /* width: 50%; */
+    flex-wrap: wrap;
+    width: 70%;
+    height:fit-content;
+    align-items: center;
 }
 article{
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
+}
+.container{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height:fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
